<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.14</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.hospital</groupId>
	<artifactId>hospital</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>hospital</name>
	<description>hospital project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>


		<dependencies>
			
		    <dependency>
		        <groupId>org.springframework.boot</groupId>
		        <artifactId>spring-boot-starter-web</artifactId>
		    </dependency>
		    
		     <dependency>
		        <groupId>org.springframework.boot</groupId>
		        <artifactId>spring-boot-starter-data-jpa</artifactId>
    		</dependency>

		      	<dependency>
			        <groupId>com.mysql</groupId>
			        <artifactId>mysql-connector-j</artifactId>
			        <scope>runtime</scope>
		    	</dependency>
		       
		       
		<!--     <dependency>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-data-jdbc</artifactId>
				</dependency>
				
		  <dependency>
		        <groupId>org.springframework.boot</groupId>
		        <artifactId>spring-boot-starter</artifactId>
		    </dependency>
			-->

			    <dependency>
			        <groupId>com.fasterxml.jackson.datatype</groupId>
			        <artifactId>jackson-datatype-jsr310</artifactId>
			    </dependency>
	
			    <dependency>
			        <groupId>org.apache.tomcat.embed</groupId>
			        <artifactId>tomcat-embed-jasper</artifactId>
			    </dependency>
		    		    
				<!-- Lombok dependency for reducing boilerplate code. -->
				    <dependency>
				        <groupId>org.projectlombok</groupId>
				        <artifactId>lombok</artifactId>
				        <optional>true</optional>
				    </dependency>
				    				    
				    <dependency>
					    <groupId>jakarta.servlet.jsp.jstl</groupId>
					    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
					</dependency>
					<dependency>
					    <groupId>org.glassfish.web</groupId>
					    <artifactId>jakarta.servlet.jsp.jstl</artifactId>
					</dependency>

				    <dependency>
				        <groupId>org.springframework.boot</groupId>
				        <artifactId>spring-boot-devtools</artifactId>
				        <optional>true</optional>
				    </dependency>
		    
			        <dependency>
				        <groupId>org.springframework.boot</groupId>
				        <artifactId>spring-boot-starter-test</artifactId>
				        <scope>test</scope>
				    </dependency>
				    
				    <dependency>
					    <groupId>org.springframework.security</groupId>
					    <artifactId>spring-security-test</artifactId>
					    <scope>test</scope>
					</dependency>

		    <dependency>
		        <groupId>com.google.code.gson</groupId>
		        <artifactId>gson</artifactId>
		    </dependency>
		 
		    	<dependency>
				    <groupId>org.springframework.security</groupId>
				    <artifactId>spring-security-web</artifactId>
				</dependency>
												
				<dependency>		    
				    <groupId>org.springframework.boot</groupId>
				    <artifactId>spring-boot-starter-security</artifactId>
				</dependency>
				
				
				
				 <!-- JWT Library -->
			    <dependency>
			        <groupId>io.jsonwebtoken</groupId>
			        <artifactId>jjwt-api</artifactId>
			        <version>0.11.5</version>
			    </dependency>
			    <dependency>
			        <groupId>io.jsonwebtoken</groupId>
			        <artifactId>jjwt-impl</artifactId>
			        <version>0.11.5</version>
			        <scope>runtime</scope>
			    </dependency>
			    <dependency>
			        <groupId>io.jsonwebtoken</groupId>
			        <artifactId>jjwt-jackson</artifactId>
			        <version>0.11.5</version>
			        <scope>runtime</scope>
			    </dependency>
			    
    <!--Aop-->
    <dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-aop</artifactId>
   </dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.21.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<scope>test</scope>
			</dependency>




	<!--	<dependency>
		    <groupId>org.eclipse.angus</groupId>
		    <artifactId>jakarta.mail</artifactId>
		</dependency>-->

		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-mail</artifactId>
		</dependency>






		</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
